# rye_sample_pkg

./: CMakeLists.txt  README.md  package.xml  pyproject.toml
scripts/: talker.py
