[project]
name = "rye-sample-pkg"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "koichirokato", email = "k.koichiro0222@gmail.com" }
]
dependencies = [
    "colcon-common-extensions>=0.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
